# whogoesthere

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
src/: checker.rs  diff.rs  finding.rs  main.rs  package_ownership.rs  util.rs
src/checkers/: apt_hooks.rs  autostart.rs  cron.rs  dbus.rs  display_manager.rs  init.rs  ld_so.rs  mod.rs  modules.rs  network_manager.rs  pam.rs  shell.rs  ssh.rs  systemd.rs  udev.rs
