[package]
name = "knockknock"
version = "0.1.0"
edition = "2024"
description = "Linux persistence enumeration"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uzers = "0.12"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
